--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "passport-local-mongoose": "^4.0.0",
     "q": "^1.4.1",
     "request": "^2.72.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0"
   }
 }
