--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "skyforecast",
   "scripts": {
     "start": "node server/server.js",
-    "test" : "mocha test/server.js --timeout 15000"
+    "test": "node_modules/mocha/bin/mocha test/server.js --timeout 15000"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -24,6 +24,10 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "http": "0.0.0",
+    "karma": "^1.4.1",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "mocha": "^3.2.0",
     "supertest": "^3.0.0"
   }
 }
