--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular": "1.3.15",
     "angular-route": "1.3.15",
     "Chart.js": "chart.js#1.0.2",
-    "angular-chart.js": "0.7.6"
+    "angular-chart.js": "0.7.6",
+    "angular-mocks": "^1.6.2"
   }
 }
