--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "chai-http": "^3.0.0",
     "http": "0.0.0",
     "karma": "^1.4.1",
+    "karma-chai": "^0.1.0",
+    "karma-cli": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "mocha": "^3.2.0",
+    "sinon": "^1.17.7",
     "supertest": "^3.0.0"
   }
 }
